Changelog
=========


1.0a9
-----


1.0a8
-----

* Fixed message value creation: filename must be in unicode, that it
  works with the new plone.namedfile 1.0.3
  [phgross]

* Added dummy setter for `title` property so it doesn't fail with an AttributeError
  when trying to set the title of a ftw.mail.mail object.
  [lgraf]

* Added missing dependency on collective.dexteritytextindexer in setup.py
  [lgraf]

* Pinned zope.component=3.8.0 in test-plone-4.0.x.cfg to resolve version conflict
  [lgraf]


1.0a7
-----

* Added DynamicTextIndexExtender to add message body to searchableText
  [lgraf]


1.0a6
-----

* Changed minor typo in German translation.
  [phabegger]


1.0a5
-----

* According to rfc 2047, multiple encoded words are seperated by space: fixed tests.
  [jbaumann]

* Created safe_decode_header util function, which handles the encoding
  properly for get_filenames according to rfc 2047.
  This solves a test issue.
  [jbaumann]

* Added support for nested multipart emails where the attachment is within another part
  of the message.
  [jbaumann]


1.0a4
-----


1.0a3
-----

* Removed `save_attachments`: moved to `opengever.mail` since its opengever specific
  [02.11.2010, jbaumann]

* Added `remove_attachments` method
  [01.11.2010, jbaumann]

* Added test for filename encoding problem. Test still fails...
  [Thomas Buchberger]

* Moved unwrapping of attached messages into utility method. Added test.
  [Thomas Buchberger]

* Correctly restore current SecurityManger after mail creation.
  [Thomas Buchberger]

* Added tests for unknown sender
  [Thomas Buchberger]

1.0a2
-----


1.0
---

* Initial release