@@ -5,6 +5,11 @@ Changelog
 1.0a9
 -----
 
+* Issue #1134 Test Gelb 2.0.3: Nicht korrekte Dateiendung beim Extrahieren eines Dokuments mit Umlaut aus Mail 
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1134/
+  added fallback in the safe_decode_header method for allready for tuples (example: allready decoded strings)
+  [phgross]
+
 
 1.0a8
 -----
